Зробила  дві сторінки 2

--- a/app/about.html
+++ b/app/about.html
@@ -32,7 +32,7 @@
         </div>
         <div class="container header__container-main">
             <div class="header__logo-box">
-                <a class="header__logo" href="#">
+                <a class="header__logo" href="index.html">
                     <img class="header__logo-img logo-dark img-responsive" src="img/logo-dark.png" alt="Logo dark" width="130" height="60">
                     <img class="header__logo-img logo-white img-responsive" src="img/logo-white.png" alt="Logo white" width="130" height="60">
                 </a>
@@ -52,7 +52,7 @@
                 </button>
                 <ul class="header__menu-list list-no-style">
                     <li class="header__menu-list-li">
-                        <a class="header__menu-link active link-style fw-700" href="#">about us</a>
+                        <a class="header__menu-link active link-style fw-700" href="about.html">about us</a>
                     </li>
                     <li class="header__menu-list-li">
                         <a class="header__menu-link link-style fw-700" href="#">services</a>
