--- a/app/index.html
+++ b/app/index.html
@@ -35,7 +35,7 @@
         </div>
         <div class="container header__container-main">
             <div class="header__logo-box">
-                <a class="header__logo" href="#">
+                <a class="header__logo" href="index.html">
                     <img class="header__logo-img logo-dark img-responsive" src="img/logo-dark.png" alt="Logo dark" width="130" height="60">
                     <img class="header__logo-img logo-white img-responsive" src="img/logo-white.png" alt="Logo white" width="130" height="60">
                 </a>
@@ -55,7 +55,7 @@
                 </button>
                 <ul class="header__menu-list list-no-style">
                     <li class="header__menu-list-li">
-                        <a class="header__menu-link active link-style fw-700" href="#">about us</a>
+                        <a class="header__menu-link link-style fw-700" href="about.html">about us</a>
                     </li>
                     <li class="header__menu-list-li">
                         <a class="header__menu-link link-style fw-700" href="#">services</a>
@@ -304,7 +304,6 @@
             </div>
         </div>
     </div>
-
 
     <div class="blog blog-info footer-glue-down ov-hidden">
         <div class="container">
